syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

enum AuthMethod
{
    AUTH_METHOD_UNKNOWN = 0;

    // Средставами протокола (имя пользователя, пароль).
    AUTH_METHOD_BASIC = 1;
}

//
// Тип сессии.
//
enum SessionType
{
    SESSION_NONE           = 0;  // Нет разрешенных возможностей.
    SESSION_DESKTOP_MANAGE = 1;  // Управление рабочим столом.
    SESSION_DESKTOP_VIEW   = 2;  // Просмотр рабочего стола.
    SESSION_POWER_MANAGE   = 4;  // Управление питанием.
    SESSION_FILE_TRANSFER  = 8;  // Передача файлов.
}

// Отправляется только от клиента к серверу.
message AuthRequest
{
    // Метод с помощью которого производится авторизация.
    AuthMethod method = 1;

    string username = 3;
    bytes password = 4;
}

// Отправляется только от сервера к клиенту.
message AuthResult
{
    enum Status
    {
        SUCCESS        = 0; // Успешная авторизация.
        ACCESS_DENIED  = 1; // Неверное имя пользователя или пароль.
        SESSION_DENIED = 2; // Тип сессии не разрешен для пользователя.
    }

    Status status = 1;

    uint32 session_types = 2;
}
